# portfolio-wt

./: CMakeLists.txt  Dockerfile  LICENSE  docker-compose.yml  readme.md
content/about/: en.json  fr.json
content/contact/: en.json  fr.json
content/projects/: en.json  fr.json
content/ui/: en.json  fr.json
include/: About.hpp  Contact.hpp  JsonUtils.hpp  LangCache.hpp  PortfolioApp.hpp  ProjectPage.hpp  Projects.hpp  TypewriterText.hpp  UIStrings.hpp
public/css/: app.css
public/js/: TypewriterEffect.js
src/: About.cpp  Contact.cpp  JsonUtils.cpp  PortfolioApp.cpp  ProjectPage.cpp  Projects.cpp  UIStrings.cpp  main.cpp
